# KTX-Software

./: .appveyor.yml  .clang-format  .codedocs  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  .gitmodules  .travis.yml  AI_INTEGRATION_SUMMARY.md  BUILDING.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EMSCRIPTEN_USAGE_RU.md  GNUmakefile  LICENSE.md  LICENSING.md  Makefile.am  PATCH_SUMMARY.md  PLAYCANVAS_INTEGRATION.md  PULL_REQUEST_SUMMARY.md  README.md  RELEASE_NOTES.md  REUSE.toml  SIZE_OPTIMIZATION.md  TODO  TODO.md  TODO.md.license  appveyor.yml  build_emscripten.bat  build_web.bat  ci_build_linux.sh  ci_build_macos.sh  ci_install_linux.sh  ci_install_macos.sh  configure  configure.ac  docker-compose.yml  (+24 more)
.reuse/: dep5
interface/basisu_c_binding/: CMakeLists.txt
interface/c_binding/: CMakeLists.txt
interface/java_binding/: .gitignore  CMakeLists.txt  README.md  jni.cmake  pom.xml
interface/python_binding/: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  build.py  buildscript.py  clean.py  conf.py  index.rst  make.bat  requirements.txt  setup.py
interface/unity/: CMakeLists.txt  dummy.c  unity_wrapper.cpp
lib/: .clang-format  CMakeLists.txt  Introduction.md  Makefile.am  astc_codec.cpp  astc_encode.cpp  basis_encode.cpp  basis_image_transcoder.h  basis_sgd.h  basis_transcode.cpp  basis_transcoder_config.h  basisu.cpp  basisu_image_transcoders.cpp  basisu_image_transcoders.h  basisu_sgd.c  basisu_sgd.h  basisu_transcoder_config.h  checkheader.c  errstr.c  etcdec.cxx  etcunpack.c  etcunpack.cxx  filestream.c  filestream.h  formatsize.h  gl_format.h  gl_funclist.inl  gl_funcptrs.h  gl_funcs.c  gl_funcs.h  gles1_funcptrs.h  gles2_funcptrs.h  gles3_funcptrs.h  glformat_str.c  glloader.c  hashlist.c  hashtable.c  info.c  internalexport.def  internalexport_mingw.def  (+67 more)
lib/astc-encoder/: .gitrepo  CMakeLists.txt
lib/basis/: .gitrepo
lib/basisu/: .gitrepo  CMakeLists.txt  basisu_astc_decomp.cpp  basisu_backend.cpp  basisu_comp.cpp  basisu_enc.cpp  basisu_enc.h  basisu_etc.cpp  basisu_etc.h  basisu_frontend.cpp  basisu_gpu_texture.cpp  lodepng.cpp
lib/cmake/: KtxConfig.cmake
lib/def/: internalexport.def  internalexport_mingw.def  internalexport_write.def  internalexport_write_mingw.def
lib/dfdutils/: .gitignore  .gitrepo  .travis.yml  LICENSE.adoc  Makefile  README.adoc  colourspaces.c  createdfd.c  createdfdtest.c  dfd.h  dfd2vk.c  dfd2vk.inl  dfd4vkformat.c  dfdutils.doxy  dfdutils.gyp  endswap.c  interpretdfd.c  interpretdfdtest.c  makedfd2vk.pl  makedfdtovk.pl  makevk2dfd.pl  makevkswitch.pl  printdfd.c  queries.c  testbidirectionalmapping.c  vk2dfd.c  vk2dfd.inl  vkdfdswitchbody.inl
lib/include/: ktx.h  ktxvulkan.h
lib/src/: astc_codec.cpp  basis_encode.cpp  basis_sgd.h  basis_transcode.cpp  bcn_codec.cpp  bcn_codec.h  bcn_common.h  bcn_decoder.cpp  bcn_encoder.cpp  checkheader.c  etcunpack.cxx  filestream.c  filestream.h  formatsize.h  gl_format.h  gl_funclist.inl  gl_funcs.c  gl_funcs.h  glformat_str.c  glloader.c  hashlist.c  info.c  ktxint.h  memstream.c  memstream.h  miniz_wrapper.cpp  multithreading.cpp  multithreading.h  strings.c  swap.c  texture.c  texture.h  texture1.c  texture1.h  texture2.c  texture2.h  texture_funcs.inl  uthash.h  vk2gl.h  vkFormat2glFormat.inl  (+13 more)
lib/zstd/: .gitrepo
tests/: CMakeLists.txt  ktx2check-tests  ktx2check-tests.cmake  ktx2ktx2-tests.cmake  ktxsc-tests.cmake  tests.cmake  tests.gypi  toktx-tests  toktx-tests.cmake
tests/appfwSDL/: AppBaseSDL.h  GLAppSDL.cpp  appfwSDL.gypi  main.cpp
tests/badktx2/: incorrect_color_model_for_basislz.ktx2  incorrect_mip_layout_and_padding.ktx2  invalid_face_count.ktx2  invalid_face_count_and_padding.ktx2  no_nul_on_kvd_val.ktx2
tests/clitests/: CMakeLists.txt  clitest.py
tests/gles1_loadtests/: at.c  at.h  main_linux_fbdev.c  main_linux_x11.c  main_linux_x11pm.c  main_win32.c  sample.h  sample_01_draw_texture.c  sample_02_cube_textured.c
tests/glloadtests/: glloadtests.gypi
tests/gtest/: .clang-format  CMakeLists.txt  README.md  gtest.gypi
tests/ktxdiff/: CMakeLists.txt  ktxdiff_main.cpp
tests/loadtests/: .gitattributes  CMakeLists.txt  compile_shader.cmake  esloadtests.cmake  glloadtests.cmake  loadtests.gypi  vkloadtests.cmake
tests/readtests/: readtests.cc  readtests.gypi
tests/resources/: genbasis  genktx2
tests/srcimages/: level0.ppm  level1-alpha.pam  level1.ppm  level2.ppm  level3-alpha.pam  level3.ppm  level4.ppm  level5-alpha.pam  level5.ppm  level6-alpha.pam  level6.ppm  luminance.pgm  no-npot.ppm  no-npot.pspimage  rgb.ppm  rgba.pam  up.ppm
tests/streamtests/: CMakeLists.txt  streamtests.cc  streamtests.gypi
tests/testimages/: 3dtex_1_reference_u.ktx2  3dtex_7_reference_u.ktx2  CesiumLogoFlat.ktx2  FlightHelmet_baseColor.ktx2  FlightHelmet_baseColor_basis.ktx2  Iron_Bars_001_normal.ktx2  Iron_Bars_001_normal_uastc_rdo3_zstd5.ktx2  alpha_simple.basis  alpha_simple_basis.ktx2  arraytex_1_reference_u.ktx2  arraytex_7_mipmap_reference_u.ktx2  arraytex_7_reference_u.ktx2  astc_ldr_10x5_FlightHelmet_baseColor.ktx2  astc_ldr_12x10_FlightHelmet_baseColor.ktx2  astc_ldr_12x12_FlightHelmet_baseColor.ktx2  astc_ldr_4x4_FlightHelmet_baseColor.ktx2  astc_ldr_5x4_Iron_Bars_001_normal.ktx2  astc_ldr_6x5.ktx2  astc_ldr_6x5_FlightHelmet_baseColor.ktx2  astc_ldr_6x6_3dtex_7.ktx2  astc_ldr_6x6_Iron_Bars_001_normal.ktx2  astc_ldr_6x6_arraytex_7.ktx2  astc_ldr_6x6_arraytex_7_mipmap.ktx2  astc_ldr_6x6_posx.ktx2  astc_ldr_8x6_FlightHelmet_baseColor.ktx2  astc_ldr_8x8_FlightHelmet_baseColor.ktx2  astc_ldr_cubemap_6x6.ktx2  astc_mipmap_ldr_10x5_posx.ktx2  astc_mipmap_ldr_12x10_posx.ktx2  astc_mipmap_ldr_12x12_posx.ktx2  astc_mipmap_ldr_4x4.ktx2  astc_mipmap_ldr_4x4_posx.ktx2  astc_mipmap_ldr_6x5.ktx2  astc_mipmap_ldr_6x5_posx.ktx2  astc_mipmap_ldr_6x6.ktx2  astc_mipmap_ldr_6x6_kodim17_exhaustive.ktx2  astc_mipmap_ldr_6x6_kodim17_fast.ktx2  astc_mipmap_ldr_6x6_kodim17_fastest.ktx2  astc_mipmap_ldr_6x6_kodim17_medium.ktx2  (+113 more)
tools/: CMakeLists.txt  ktxtools.pkgproj  ktxtools_mainpage.md  tools.gypi  toolsdoc.gypi
(+1468 files in other folders)
